# msp430_project

./: CMakeLists.txt
Core/Inc/: DAC7311.h  bsp_Clock.h  bsp_GPIO.h  bsp_Key.h  bsp_pwm.h  msp430_it.h  softFIFO.h  sys.h
Core/Src/: DAC7311.c  bsp_Clock.c  bsp_GPIO.c  bsp_Key.c  bsp_pwm.c  main.c  msp430_it.c  mymsp430work.puml  softFIFO.c
Device/Inc/: msp430_.h  msp430_adc10.h  msp430_gpio.h  msp430_timer_a.h
Device/LCD/: HT1621.c  HT1621.h  I2C.c  I2C.h  LCD_128.c  LCD_128.h  TCA6416A.c  TCA6416A.h
Device/SD/: SD_HardWare.c  SD_SPI.c  SPI.c  SPI.h
Device/ScopeADC/: ComparatorA.c  Slope.c  Timer_A3.c
Device/Src/: msp430_adc10.c  msp430_gpio.c  msp430_timer_a.c
MyApp/: Player_APP.c  Player_APP.h  Record_APP.c  Record_APP.h  SM_APP.c  SM_APP.h  TouchIN.c  TouchIN.h
